[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georinex"
description = "Python RINEX 2/3 NAV/OBS reader with speed and simplicity."
keywords = ["RINEX", "sp3", "HDF5", "NetCDF4"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
requires-python = ">=3.8"
dynamic = ["readme", "version"]
dependencies = ["python-dateutil", "numpy", "xarray", "hatanaka", "ncompress", "netcdf4"]


[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "georinex.__version__"}

[project.optional-dependencies]
tests = ["pytest", "pytest-timeout"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]
plot = ["matplotlib", "pymap3d", "cartopy"]
io = ["psutil"]

[tool.black]
line-length = 99

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
addopts = "-ra"
