[metadata]
name = georinex
version = 1.14.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python RINEX 2/3 NAV/OBS reader with speed and simplicity.
url = https://github.com/geospace-code/georinex
keywords =
  RINEX
  sp3
  HDF5
  NetCDF4
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6.2
include_package_data = True
zip_safe = False
packages = find:
scripts =
  PlotRXlocation.py
  PlotRinex.py
  ReadRinex.py
  TimeRinex.py
  rnx2hdf5.py
install_requires =
  python-dateutil
  numpy
  xarray>=0.11

[options.entry_points]
console_scripts =
  ReadRinex = ReadRinex:main
  TimeRinex = TimeRinex:main
  PlotRinex = PlotRinex:main
  rnx2hdf5 = rnx2hdf5:main

[options.extras_require]
tests =
  pytest>=3.9
  pytest-timeout
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
  pymap3d
  cartopy
io =
  netcdf4
  unlzw3
  psutil
