[metadata]
name = georinex
version = 1.15.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python RINEX 2/3 NAV/OBS reader with speed and simplicity.
url = https://github.com/geospace-code/georinex
keywords =
  RINEX
  sp3
  HDF5
  NetCDF4
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray>=0.11
  hatanaka
package_dir=
  =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  georinex_read = georinex.__main__:georinex_read
  georinex_time = georinex.__main__:georinex_time
  georinex_plot = georinex.__main__:georinex_plot
  georinex_loc = georinex.__main__:georinex_loc
  rinex2hdf5 = georinex.__main__:rinex2hdf5

[options.extras_require]
tests =
  pytest>=3.9
  pytest-timeout
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
  types-python-dateutil
plot =
  matplotlib
  seaborn
  pymap3d
  cartopy
io =
  netcdf4
  unlzw3
  psutil
